--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,5 @@ services:
     restart: unless-stopped
     depends_on:
       - shortener
-    command: ["/bin/sh", "-c", "docker exec -t shortener shlink api-key:generate"]
+    command: ["/bin/sh", "-c", "docker exec -t shortener-shortener-1 shlink api-key:generate"]
 #   fake line
